[package]
name = "analyzer-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "whalestats"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["blocking"]}
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
threadpool = "1.8.1"
owo-colors = "4.2.0"