[package]
name = "analyzer-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "analyzer_core"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}
tokio = { version = "1", features = ["rt", "sync", "time"]}
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
owo-colors = "4.2.0"